fix vehicle, dealership queries, creators
